--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'Roboto', sans-serif;
 }
 a {
   color: inherit;
@@ -66,6 +67,11 @@ h3 {
   display: flex;
   justify-content: center;
   margin-bottom: 1em;
+  button {
+    border: none;
+    border-radius: 5px;
+    padding: .5em;
+  }
 }
 .book-title {
 
@@ -87,7 +93,7 @@ h3 {
 @media (min-width: 500px) {
   footer {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: flex-start;
 
     .links {
